[project]
name = "seqstoreestimator"
version = "0.1.0"
description = ""
authors = [
    {name = "rajwanir2",email = "rahim.rajwani@nih.gov"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "shiny (>=1.5.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "shinywidgets (>=0.7.0,<0.8.0)",
    "shinyswatch (>=0.9.0,<0.10.0)",
    "faicons (>=0.2.2,<0.3.0)"
]

[tool.poetry]
packages = [{include = "seqstoreestimator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
